[package]
name = "nndl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14.0"
rand = "0.8"
mnist = "0.5.0"
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }
